cambios al programa

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   </head>
   <body>
 
-    <button class="btn btn-success" data-bs-toggle="offcanvas" data-bs-target="#intro">Presina aqui</button>
-    <div class="offcanvas start" id="intro">
+    <button class="btn btn-success mx-3 mt-3" data-bs-toggle="offcanvas" data-bs-target="#intro">Presina aqui</button>
+
+    <div class="offcanvas offcanvas-end" id="intro">
         <div class="offcanvas-header">
             <div class="offcanvas-title">
-                <button class="btn btn-danger" data-bs-dismiss="offcanvas"></button>
+                <button class="btn btn-danger" data-bs-dismiss="offcanvas">Cerrar</button>
             </div>
         </div>
         <div class="offcanvas-body">
             <p>lunes</p>
             <p>martes</p>
             <p>miercoles</p>
+            <button class="btn btn-primary">Presiona aqui mi pai!</button>
         </div>
     </div>
 
